--- a/Aqua/MVVM/Views/StorePages/StoreAddOrUpdate.xaml
+++ b/Aqua/MVVM/Views/StorePages/StoreAddOrUpdate.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Aqua.MVVM.Views"
-        mc:Ignorable="d" Height="250" Width="600" WindowStartupLocation="CenterScreen"
+        mc:Ignorable="d" Height="300" Width="600" WindowStartupLocation="CenterScreen"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         WindowStyle="None" AllowsTransparency="True" Background="#edfefa" Loaded="Window_Loaded">
     
@@ -57,7 +57,18 @@
                 </TextBox.Resources>
             </TextBox>
 
-            <Button x:Name="btnSave" Grid.Column="2" Width="100" Height="40" Margin="0,15,0,0" Style="{StaticResource ButtonStyle}" Background="Green" Content="افزودن کالای جدید" Foreground="White" FontFamily="Dirooz FD" Click="Button_Click_1"/>
+            <TextBox x:Name="txtModelDevice" Margin="0 30 0 0" Height="30" Width="200" Background="WhiteSmoke" Foreground="Black"
+  FontSize="15" HorizontalAlignment="Center"
+  VerticalAlignment="Center" FlowDirection="RightToLeft"
+  VerticalContentAlignment="Center" FontFamily="Dirooz FD" BorderBrush="#3a3a3a" >
+                <TextBox.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="10"/>
+                    </Style>
+                </TextBox.Resources>
+            </TextBox>
+
+            <Button x:Name="btnSave" Grid.Column="2" Width="100" Height="40" Margin="0,10,0,0" Style="{StaticResource ButtonStyle}" Background="Green" Content="افزودن کالای جدید" Foreground="White" FontFamily="Dirooz FD" Click="Button_Click_1"/>
 
         </StackPanel>
 
@@ -101,7 +112,7 @@
                 </TextBox.Resources>
             </TextBox>
 
-            <Button Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100" Height="40" Margin="0,15,0,0" Style="{StaticResource ButtonStyle}" Background="Red" Content="بستن" Foreground="White" FontFamily="Dirooz FD" Click="Button_Click"/>
+            <Button Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="100" Height="40" Margin="0,70,0,0" Style="{StaticResource ButtonStyle}" Background="Red" Content="بستن" Foreground="White" FontFamily="Dirooz FD" Click="Button_Click"/>
         </StackPanel>
             
     </Grid>
